--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "node-sass -w scss/ -o css/ --recursive"
+    "sass": "node-sass --include-path scss Styles/styles.scss Styles/Output.css"
   },
   "repository": {
     "type": "git",
@@ -18,5 +17,7 @@
     "url": "https://github.com/Bianchi446/portfolio/issues"
   },
   "homepage": "https://github.com/Bianchi446/portfolio#readme",
-  "dependencies": {}
+  "dependencies": {
+    "node-sass": "^7.0.1"
+  }
 }
